--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="container">
             <header id="luxbar" class="luxbar-fixed">
                 <input type="checkbox" class="luxbar-checkbox" id="luxbar-checkbox" />
-                <div class="luxbar-menu luxbar-menu-right luxbar-menu-material-cyan">
+                <div class="luxbar-menu luxbar-menu-right">
                     <ul class="luxbar-navigation">
                         <li class="luxbar-header">
                             <a href="#" class="luxbar-brand">LUXBAR</a>
