Update demo file based on style changes, and add icons to menu.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Luxbar Demo</title>
 
         <link rel="stylesheet" href="build/luxbar.css">
+        <link href="https://unpkg.com/mono-icons@1.3.1/iconfont/icons.css" rel="stylesheet">
 
         <style>
             body {
@@ -29,6 +30,7 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+
     <body>
         <div class="container">
             <header id="luxbar" class="luxbar-fixed">
@@ -37,12 +39,19 @@
                     <ul class="luxbar-navigation">
                         <li class="luxbar-header">
                             <a href="#" class="luxbar-brand">LUXBAR</a>
-                            <label class="luxbar-hamburger luxbar-hamburger-doublespin"
-                                   id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
+                            <label class="luxbar-hamburger luxbar-hamburger-doublespin" id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
                         </li>
-                        <li class="luxbar-item"><a class="demo-btn col-md-2 col-sm-2 col-xs-10" href="https://github.com/avlcodemonkey/luxbar"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a></li>
-                        <li class="luxbar-item"><a class="demo-btn col-md-2 col-sm-2 col-xs-10" href="https://github.com/avlcodemonkey/luxbar/blob/master/docs/docs.md"><i class="fa fa-file-text-o" aria-hidden="true"></i> Docs</a></li>
-                        <li class="luxbar-item"><a class="demo-btn col-md-2 col-sm-2 col-xs-10" href="https://github.com/avlcodemonkey/luxbar/blob/master/docs/faq.md"><i class="fa fa-question-circle-o" aria-hidden="true"></i> FAQ</a></li>
+                        <li><a href="https://github.com/avlcodemonkey/luxbar"><i class="mi-home" aria-hidden="true"></i> GitHub</a></li>
+                        <li><a href="#"><i class="mi-document-empty" aria-hidden="true"></i> Docs</a></li>
+                        <li><a href="#"><i class="mi-circle-help" aria-hidden="true"></i> FAQ</a></li>
+                        <li class="luxbar-dropdown">
+                            <a href="#"><i class="mi-user" aria-hidden="true"></i> Users</a>
+                            <ul>
+                                <li><a href="#">Max</a></li>
+                                <li><a href="#">Edgar</a></li>
+                                <li><a href="#">John</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </header>
