--- a/index.html
+++ b/index.html
@@ -62,10 +62,17 @@
             </div>
 
             <h1 style="padding-top: 24px;">Getting started:</h1>
-                
+
+            <h2>Who is this intended for?</h2>
+            <p>For everyone who wants a responsive navigation bar that looks good on every screensize, lightweight and easy to implement.</p>
+
+            <h2>Why should I use this instead of existing solutions (e.g. Bootstrap's navbar)?</h2>
+            <p>Existing "premade" navbars are usually packed with a full blown CSS framework and rely heavily on JS. If you are already using Bootstrap for your site maybe it's not worth it but I would still recommend giving it a try for the fancy colors and animations.</p>
+
+            <h2>Can I use it in a closed source project?</h2>
+            <p>It is licensed under the MIT license, you can use it anywhere you want.</p>
         </div>
 
         <div id="footer"></div>
-
     </body>
 </html>
