--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <ul class="luxbar-navigation">
                         <li class="luxbar-header">
                             <a href="#" class="luxbar-brand">LUXBAR</a>
-                            <label class="luxbar-hamburger luxbar-hamburger-doublespin" id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
+                            <label class="luxbar-hamburger" id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
                         </li>
                         <li><a href="https://github.com/avlcodemonkey/luxbar"><i class="mi-home" aria-hidden="true"></i> GitHub</a></li>
                         <li><a href="#"><i class="mi-document-empty" aria-hidden="true"></i> Docs</a></li>
