Remove sass vars and simplify styling.

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
     <body>
         <div class="container">
-            <header id="luxbar" class="luxbar-fixed">
-                <input type="checkbox" class="luxbar-checkbox" id="luxbar-checkbox" />
-                <div class="luxbar-menu luxbar-menu-right">
+            <header id="luxbar" class="luxbar">
+                <input type="checkbox" id="luxbar-checkbox" />
+                <div class="luxbar-menu">
                     <ul class="luxbar-navigation">
                         <li class="luxbar-header">
                             <a href="#" class="luxbar-brand">LUXBAR</a>
-                            <label class="luxbar-hamburger luxbar-hamburger-doublespin" id="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
+                            <label class="luxbar-hamburger" for="luxbar-checkbox"> <span></span> </label>
                         </li>
                         <li><a href="https://github.com/avlcodemonkey/luxbar"><i class="mi-home" aria-hidden="true"></i> GitHub</a></li>
                         <li><a href="#"><i class="mi-document-empty" aria-hidden="true"></i> Docs</a></li>
