Start migration to native css.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
         <meta charset="utf-8">
         <title>Luxbar Demo</title>
 
+        <!-- Production build
         <link rel="stylesheet" href="build/luxbar.css">
+        -->
+        <link rel="stylesheet" href="css/luxbar.css">
         <link href="https://unpkg.com/mono-icons@1.3.1/iconfont/icons.css" rel="stylesheet">
 
         <style>
